--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
-  },
+ },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "recharts": "^2.6.2",
-    "lucide-react": "^0.230.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^4.0.0"
   }
 }
